src/objects/Postgres_Connection__c.object
<CustomObject>
    <fields>
        <fullName>databaseName__c</fullName>
        <label>Database name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>databaseURL__c</fullName>
        <label>Database URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>heroku_postgres_name__c</fullName>
        <label>Heroku Postgres Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>userName__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Postgres Connection</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>heroku_postgres_name__c</columns>
        <columns>databaseURL__c</columns>
        <columns>databaseName__c</columns>
        <columns>userName__c</columns>
        <columns>password__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Postgres Connection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Postgres Connections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>